# storage/api-docs/api-docs.json
@@ -14,7 +14,7 @@
         "version": "0.1"
     },
     "paths": {
-        "/api/v1/": {
+        "/api/v1/anime": {
             "get": {
                 "tags": [
                     "Animes"
@@ -37,7 +37,7 @@
                 }
             }
         },
-        "/api/v1/{title}": {
+        "/api/v1/anime/{title}": {
             "get": {
                 "tags": [
                     "Animes"
